--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <title>Broadway Design</title>
   </head>
   <body>
+
+    <div class="building">
+      <h1 class="white">Hello World</h1>
+      <nav>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Process</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact</a></li>
+      </nav>
+    </div>
 
   </body>
 </html>
