--- a/index.html
+++ b/index.html
@@ -7,15 +7,72 @@
   </head>
   <body>
 
-    <div class="building">
-      <h1 class="white">Hello World</h1>
-      <nav>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Process</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Contact</a></li>
-      </nav>
+    <div class="main">
+
+      <div class="building">
+        <h1 class="white">Broadway Design</h1>
+        <nav>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Process</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Contact</a></li>
+        </nav>
+      </div>
+
+      <div class="process">
+        <h2>Our Process</h2>
+
+        <div class="content-identify">
+          <img src="./img/identify.png" alt="Identify">
+          <h3>Identify</h3>
+          <p>We focus on the most important details.</p>
+        </div>
+
+        <div class="content-identify">
+          <img src="./img/understand.png" alt="Understand">
+          <h3>Understand</h3>
+          <p>We study our projects inside and out.</p>
+        </div>
+
+        <div class="content-identify">
+          <img src="./img/execute.png" alt="Execute">
+          <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
+        </div>
+      </div>
+
+      <div class="contact">
+            <h3 class="designed white">Designed in New York</h3>
+
+            <div class="content-contact">
+              <h3>Portfolio</h3>
+              <p>Coming Soon</p>
+            </div>
+
+            <div class="content-contact">
+              <h3>Team</h3>
+              <p>We're Hiring!</p>
+            </div>
+
+            <div class="content-contact">
+              <h3>Contact</h3>
+              <p>Phone: (555)-555-5555 <br />
+                E-mail: test@example.com <br />
+                Twitter: @test</p>
+            </div>
+      </div>
+
+      <div class="footer">
+        <p class="copyright white">© Broadway 2017
+          <a class="copyright white" href="#">Home</a>
+          <a class="copyright white" href="#">Process</a>
+          <a class="copyright white" href="#">Work</a>
+          <a class="copyright white" href="#">Team</a>
+          <a class="copyright white" href="#">Contact</a>
+        </p>
+      </div>
+
     </div>
 
   </body>
